with drop down list

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -10,5 +10,11 @@
     <string name="tag">Tag</string>
     <string name="enter_image_url">Enter image URL</string>
     <string name="save">SAVE</string>
+    <string name="select_country">Select Country</string>
+    <string-array name="countries">
+        <item>"AUSTRALIA"</item>
+        <item>"BULGARIA"</item>
+        <item>"INDIA"</item>
+    </string-array>
 
 </resources>
